<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/galleryFragment"
        android:icon="@drawable/vector_gallery"
        android:title="@string/nav_gallery" />

    <item
        android:id="@+id/albumsFragment"
        android:icon="@drawable/vector_albums"
        android:title="@string/nav_albums" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/vector_images_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/peopleFragment"
        android:icon="@drawable/vector_peoples"
        android:title="@string/nav_people" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/vector_settings"
        android:title="@string/nav_settings" />
</menu>