<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/vector_edit"
        android:title="@string/people_rename" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/vector_delete"
        android:title="@string/people_delete" />

    <item
        android:id="@+id/action_hide"
        android:icon="@drawable/vector_account_off"
        android:title="@string/people_hide" />

    <item
        android:id="@+id/action_unhide"
        android:icon="@drawable/vector_peoples"
        android:title="@string/people_unhide" />

    <item
        android:id="@+id/action_exclude"
        android:icon="@drawable/vector_account_off"
        android:title="@string/people_exclude_irrelevant" />

</menu>