<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/galleryFragment">

    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.cevague.vindex.ui.gallery.GalleryFragment"
        android:label="@string/nav_gallery" />

    <fragment
        android:id="@+id/albumsFragment"
        android:name="com.cevague.vindex.ui.albums.AlbumsFragment"
        android:label="@string/nav_albums">
        <action
            android:id="@+id/action_albums_to_detail"
            app:destination="@id/albumDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="com.cevague.vindex.ui.albums.AlbumDetailFragment"
        android:label="@string/nav_albums">
        <argument
            android:name="folderPath"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="albumId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.cevague.vindex.ui.search.SearchFragment"
        android:label="@string/nav_search">

        <argument
            android:name="prefilled_query"
            android:defaultValue=""
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.cevague.vindex.ui.people.PeopleFragment"
        android:label="@string/nav_people">
        <action
            android:id="@+id/action_people_to_personDetail"
            app:destination="@id/personDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/personDetailFragment"
        android:name="com.cevague.vindex.ui.people.PersonDetailFragment"
        android:label="@string/nav_people">
        <argument
            android:name="personId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.cevague.vindex.ui.settings.SettingsFragment"
        android:label="@string/nav_settings">
        <action
            android:id="@+id/action_settings_to_models"
            app:destination="@id/modelsFragment" />
        <action
            android:id="@+id/action_settings_to_debug"
            app:destination="@id/debugSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/modelsFragment"
        android:name="com.cevague.vindex.ui.settings.ModelsFragment"
        android:label="@string/models_title" />

    <fragment
        android:id="@+id/debugSettingsFragment"
        android:name="com.cevague.vindex.ui.settings.DebugSettingsFragment"
        android:label="@string/settings_advanced" />

</navigation>